--- a/share/default/perl-5.12.0/win32/config.gc.tt
+++ b/share/default/perl-5.12.0/win32/config.gc.tt
@@ -792,10 +792,10 @@ mallocsrc='malloc.c'
 malloctype='void *'
 man1dir=''
 man1direxp=''
-man1ext=''
+man1ext='1'
 man3dir=''
 man3direxp=''
-man3ext=''
+man3ext='3'
 mips_type=''
 mistrustnm=''
 mkdir='mkdir'
@@ -1038,6 +1038,7 @@ uvsize='4'
 uvtype='unsigned long'
 uvuformat='"lu"'
 uvxformat='"lx"'
+vaproto='undef'
 vendorarch='~INST_TOP~\vendor~INST_VER~\lib~INST_ARCH~'
 vendorarchexp='~INST_TOP~\vendor~INST_VER~\lib~INST_ARCH~'
 vendorbin='~INST_TOP~~INST_VER~\bin~INST_ARCH~'
