--- a/share/default/perl-5.12.0/win32/config.gc64nox.tt
+++ b/share/default/perl-5.12.0/win32/config.gc64nox.tt
@@ -51,7 +51,6 @@ ccversion=''
 cf_by='[% self.perl_config_cf_by %]'
 cf_email='[% self.perl_config_cf_email %]'
 cf_time=''
-charbits='8'
 chgrp=''
 chmod=''
 chown=''
@@ -98,7 +97,7 @@ d_archlib='define'
 d_asctime64='undef'
 d_asctime_r='undef'
 d_atolf='undef'
-d_atoll='undef'
+d_atoll='define'
 d_attribute_deprecated='undef'
 d_attribute_format='undef'
 d_attribute_malloc='undef'
@@ -287,7 +286,7 @@ d_localtime_r_needs_tzset='undef'
 d_locconv='define'
 d_lockf='undef'
 d_longdbl='define'
-d_longlong='undef'
+d_longlong='define'
 d_lseekproto='define'
 d_lstat='undef'
 d_madvise='undef'
@@ -331,7 +330,7 @@ d_ndbm='undef'
 d_ndbm_h_uses_prototypes='undef'
 d_nice='undef'
 d_nl_langinfo='undef'
-d_nv_preserves_uv='define'
+d_nv_preserves_uv='undef'
 d_nv_zero_is_allbits_zero='define'
 d_off64_t='undef'
 d_old_pthread_create_joinable='undef'
@@ -467,10 +466,10 @@ d_strlcpy='undef'
 d_strtod='define'
 d_strtol='define'
 d_strtold='undef'
-d_strtoll='undef'
+d_strtoll='define'
 d_strtoq='undef'
 d_strtoul='define'
-d_strtoull='undef'
+d_strtoull='define'
 d_strtouq='undef'
 d_strxfrm='define'
 d_suidsafe='undef'
@@ -530,6 +529,7 @@ db_version_patch='0'
 defvoidused='15'
 direntrytype='struct direct'
 dlext='dll'
+dlltool='dlltool'
 dlsrc='dl_win32.xs'
 doublesize='8'
 drand01='(rand()/(double)((unsigned)1<<RANDBITS))'
@@ -741,9 +741,9 @@ installvendorman3dir=''
 installvendorscript='~INST_TOP~~INST_VER~\bin'
 intsize='4'
 issymlink=''
-ivdformat='"ld"'
-ivsize='4'
-ivtype='long'
+ivdformat='"I64d"'
+ivsize='8'
+ivtype='long long'
 known_extensions='~static_ext~ ~dynamic_ext~ ~nonxs_ext~'
 ksh=''
 ld='g++'
@@ -777,8 +777,8 @@ longsize='4'
 lp=''
 lpr=''
 ls='dir'
-lseeksize='4'
-lseektype='long'
+lseeksize='8'
+lseektype='long long'
 mad='undef'
 madlyh=''
 madlyobj=''
@@ -792,10 +792,10 @@ mallocsrc='malloc.c'
 malloctype='void *'
 man1dir=''
 man1direxp=''
-man1ext=''
+man1ext='1'
 man3dir=''
 man3direxp=''
-man3ext=''
+man3ext='3'
 mips_type=''
 mistrustnm=''
 mkdir='mkdir'
@@ -823,7 +823,7 @@ nvEUformat='"E"'
 nvFUformat='"F"'
 nvGUformat='"G"'
 nv_overflows_integers_at='256.0*256.0*256.0*256.0*256.0*256.0*2.0*2.0*2.0*2.0*2.0'
-nv_preserves_uv_bits='32'
+nv_preserves_uv_bits='53'
 nveformat='"e"'
 nvfformat='"f"'
 nvgformat='"g"'
@@ -860,7 +860,7 @@ privlib='~INST_TOP~~INST_VER~\lib'
 privlibexp='~INST_TOP~~INST_VER~\lib'
 procselfexe=''
 prototype='define'
-ptrsize='4'
+ptrsize='8'
 quadkind='3'
 quadtype='long long'
 randbits='15'
@@ -884,15 +884,15 @@ sLOCALTIME_min="0"
 sPRIEUldbl='"E"'
 sPRIFUldbl='"F"'
 sPRIGUldbl='"G"'
-sPRIXU64='"lX"'
-sPRId64='"ld"'
+sPRIXU64='"I64X"'
+sPRId64='"I64d"'
 sPRIeldbl='"e"'
 sPRIfldbl='"f"'
 sPRIgldbl='"g"'
-sPRIi64='"li"'
-sPRIo64='"lo"'
-sPRIu64='"lu"'
-sPRIx64='"lx"'
+sPRIi64='"I64i"'
+sPRIo64='"I64o"'
+sPRIu64='"I64u"'
+sPRIx64='"I64x"'
 sSCNfldbl='"f"'
 sched_yield=''
 scriptdir='~INST_TOP~~INST_VER~\bin'
@@ -942,7 +942,7 @@ siteprefix='~INST_TOP~\site~INST_VER~'
 siteprefixexp='~INST_TOP~\site~INST_VER~'
 sitescript='~INST_TOP~\site~INST_VER~\bin'
 sitescriptexp='~INST_TOP~\site~INST_VER~\bin'
-sizesize='4'
+sizesize='8'
 sizetype='size_t'
 sleep=''
 smail=''
@@ -956,7 +956,7 @@ spitshell=''
 srand48_r_proto='0'
 srandom_r_proto='0'
 src=''
-ssizetype='int'
+ssizetype='long long'
 startperl='#!perl'
 startsh='#!/bin/sh'
 static_ext=' '
@@ -1004,7 +1004,7 @@ uniq='uniq'
 uquadtype='unsigned long long'
 use5005threads='undef'
 use64bitall='undef'
-use64bitint='undef'
+use64bitint='define'
 usecrosscompile='undef'
 usedevel='undef'
 usedl='define'
@@ -1032,12 +1032,12 @@ usevendorprefix='define'
 usevfork='false'
 usrinc='/usr/include'
 uuname=''
-uvXUformat='"lX"'
-uvoformat='"lo"'
-uvsize='4'
-uvtype='unsigned long'
-uvuformat='"lu"'
-uvxformat='"lx"'
+uvXUformat='"I64X"'
+uvoformat='"I64o"'
+uvsize='8'
+uvtype='unsigned long long'
+uvuformat='"I64u"'
+uvxformat='"I64x"'
 vendorarch='~INST_TOP~\vendor~INST_VER~\lib~INST_ARCH~'
 vendorarchexp='~INST_TOP~\vendor~INST_VER~\lib~INST_ARCH~'
 vendorbin='~INST_TOP~~INST_VER~\bin~INST_ARCH~'
