--- a/share/default/Merge-Module.wxs.tt
+++ b/share/default/Merge-Module.wxs.tt
@@ -21,23 +21,15 @@
 
 [% dist.feature_tree_object.as_string_msm %]
 
-    <CustomAction Id='CA_ClearFolder' BinaryKey='B_ClearFolder' DllEntry='ClearFolderFast' />
+    <CustomAction Id='CA_ClearFolder' BinaryKey='B_ClearFolder' DllEntry='ClearFolder' />
     <InstallExecuteSequence>
       <Custom Action='CA_ClearFolder' Before='InstallInitialize'>REMOVE="ALL" AND NOT VersionNT64</Custom>
     </InstallExecuteSequence>
 
 [% IF dist.msi_debug %]
-  [% IF 64 == dist.bits %]
-    <Binary Id='B_ClearFolder' SourceFile='[% dist.wix_dist_dir %]\debug_dll\x64\ClearFolderCA.dll' />
-  [% ELSE %]
     <Binary Id='B_ClearFolder' SourceFile='[% dist.wix_dist_dir %]\debug_dll\ClearFolderCA.dll' />
-  [% END %]
 [% ELSE %]
-  [% IF 64 == dist.bits %]
-    <Binary Id='B_ClearFolder' SourceFile='[% dist.wix_dist_dir %]\x64\ClearFolderCA.dll' />
-  [% ELSE %]
     <Binary Id='B_ClearFolder' SourceFile='[% dist.wix_dist_dir %]\ClearFolderCA.dll' />
-  [% END %]
 [% END %]
     <UI>
    	  <ProgressText Action="CA_ClearFolder">Scanning for added files to delete... (please wait a while)</ProgressText>
